# OpenParlament-online

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-render.txt  requirements.txt
docs/: Lastenheft.md  Pflichtenheft.md  Project.md
scripts/: __init__.py  db_init.py  db_inspect.py  db_patch.py  demo_ringtones.py  import_xmls.py  nlp_session.py  run_dashboard.py  run_nlp_cli.py  run_ringtones.py  run_scraper.py
src/: __init__.py  analytics.py  app.py  database.py  models.py  nlp.py  parser.py  ringtones.py  scraper.py
tests/: __init__.py  test_app.py  test_core.py  test_scraper_skip_existing.py
